--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 11:19:00 AM</p>
+    <p class="lastupdate">09/10/2020 11:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.2&#176;F</td>
+        <td class="data">62.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.2&#176;F</td>
+        <td class="data">62.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.2&#176;F</td>
+        <td class="data">62.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.9&#176;F</td>
+        <td class="data">49.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">64%</td>
+        <td class="data">63%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.026 inHg (0.023)</td>
+        <td class="data">30.027 inHg (0.023)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph ESE (112&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:18:54 AM">
-            62.2</span><br/>
+          <span title="11:24:00 AM">
+            62.5</span><br/>
           <span title="07:06:15 AM">
             54.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:18:54 AM" class="hival">
-            62.2</span>
+          <span title="11:24:00 AM" class="hival">
+            62.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:18:54 AM">
-            49.9</span><br/>
+          <span title="11:20:58 AM">
+            50.0</span><br/>
           <span title="12:06:48 AM">
             45.7</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          153
+          145
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 20 hours, 32 minutes</td>
+      <td class="data">8 days, 20 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 20 hours, 32 minutes</td>
+      <td class="data">8 days, 20 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
