--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 11:59:00 AM</p>
+    <p class="lastupdate">09/10/2020 12:04:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,27 +50,27 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.1&#176;F</td>
+        <td class="data">64.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.1&#176;F</td>
+        <td class="data">64.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.1&#176;F</td>
+        <td class="data">64.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.0&#176;F</td>
+        <td class="data">48.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">58%</td>
+        <td class="data">57%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.019 inHg (0.014)</td>
+        <td class="data">30.022 inHg (0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="11:58:22 AM">
-            64.1</span><br/>
+          <span title="12:03:30 PM">
+            64.5</span><br/>
           <span title="07:06:15 AM">
             54.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="11:58:22 AM" class="hival">
-            64.1</span>
+          <span title="12:03:30 PM" class="hival">
+            64.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:07:15 AM">
             77</span><br/>
-          <span title="11:53:12 AM">
-            58</span>
+          <span title="12:00:02 PM">
+            57</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:23:09 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 21 hours, 12 minutes</td>
+      <td class="data">8 days, 21 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 21 hours, 12 minutes</td>
+      <td class="data">8 days, 21 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
