--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 12:09:00 PM</p>
+    <p class="lastupdate">09/10/2020 12:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">64.9&#176;F</td>
+        <td class="data">65.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">64.9&#176;F</td>
+        <td class="data">65.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">64.9&#176;F</td>
+        <td class="data">65.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">56%</td>
+        <td class="data">55%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.022 inHg (0.016)</td>
+        <td class="data">30.021 inHg (0.012)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph SE (135&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:08:16 PM">
-            64.9</span><br/>
+          <span title="12:13:14 PM">
+            65.4</span><br/>
           <span title="07:06:15 AM">
             54.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:08:16 PM" class="hival">
-            64.9</span>
+          <span title="12:13:14 PM" class="hival">
+            65.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:07:15 AM">
             77</span><br/>
-          <span title="12:06:00 PM">
-            56</span>
+          <span title="12:13:42 PM">
+            55</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:23:09 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 21 hours, 22 minutes</td>
+      <td class="data">8 days, 21 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 21 hours, 22 minutes</td>
+      <td class="data">8 days, 21 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
