--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/10/2020 12:44:00 PM</p>
+    <p class="lastupdate">09/10/2020 12:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">67.1&#176;F</td>
+        <td class="data">67.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">67.1&#176;F</td>
+        <td class="data">67.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">67.1&#176;F</td>
+        <td class="data">67.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.4&#176;F</td>
+        <td class="data">49.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">53%</td>
+        <td class="data">52%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.031 inHg (0.014)</td>
+        <td class="data">30.014 inHg (-0.006)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph W (270&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:40:14 PM">
-            67.1</span><br/>
+          <span title="12:48:56 PM">
+            67.4</span><br/>
           <span title="07:06:15 AM">
             54.2</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:40:14 PM" class="hival">
-            67.1</span>
+          <span title="12:48:56 PM" class="hival">
+            67.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:07:15 AM">
             77</span><br/>
-          <span title="12:25:40 PM">
-            53</span>
+          <span title="12:47:00 PM">
+            52</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:23:09 AM (Wednesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          109
+          112
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">8 days, 21 hours, 57 minutes</td>
+      <td class="data">8 days, 22 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">8 days, 21 hours, 57 minutes</td>
+      <td class="data">8 days, 22 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
